Styling CSS and HTML Add new containers for flex item alignment and nearly finish top of webpage. Figure out how to prevent placeholder img box pericing from rest of page.

--- a/style.css
+++ b/style.css
@@ -1,11 +1,128 @@
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0;
     display: flex;
-    flex-direction: column;}
+    flex-direction: column;
+}
+
 
     .top { 
-        
         background:#1f2937;
         display: flex;
+        padding: 10px;
         flex-direction: column;
+}
+
+.header { 
+    display: flex;
+    justify-content: space-around;
+    align-content: center;
+    font-size: 24px;
+    color: #f9fAf8;
+}
+
+ul {
+    display: flex;
+    list-style-type: none;
+    font-size: 18px;
+    gap: 20px;
+}
+
+.middle1{
+    display: flex;
+    flex-direction: column wrap;
+    flex: 1;
+    gap: 50px;
+    width: 1200px;
+    height: 400px;
+    padding: 90px;
+    margin-left: 200px;
+    font-size: 18px;
+    color: #E5E7Eb;
+}
+
+.content {
+
+}
+h2{ 
+   font-size: 48px; 
+   font-weight: bolder;
+   color: #f9fAf8;
+   margin-bottom: -10px;
+}
+
+button.top {
+    margin-top: -10px;
+    padding: 5px;
+    padding-right: 20px;
+    padding-left: 22px;
+    border-radius: 10px;
+    background-color: #3882f6;
+    color: #E5E7Eb;
+    font-weight: bold;
+}
+
+.img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background:dimgray;
+    padding: 50px;
+    height: 175px;
+    width: 1200px;
+}
+
+.middle2{
+   font-size: 36px;
+   font-weight: bolder;
+   color: #1f2937;
+}
+
+.container {
+    font-size: 16px;
+   font-weight:lighter;
+   color: #1f2937;
+}
+
+.from {
+    background: #e5e7eb;
+    color:#1f2937;
+    
+}
+
+.quote {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
+    background: #e5e7eb;
+    color:#1f2937;
+} 
+
+.middle3{
+    padding: 100px;
+}
+
+.signup {
+    display: flex;
+    flex-direction: column;
+background: #3882f6;
+color: #E5E7Eb;
+}
+
+button{
+    width: 100px;
+    padding: 5px;
+    border-radius: 10px;
+    background-color: #3882f6;
+    color: #E5E7Eb;
+    font-weight: bold;
+}
+
+.footer { 
+    background:#1f2937;
+    color: white;
+    display: flex;
+    flex: 1;
+    justify-content:center;
+      
 }
